changes from Simon Lucy, made for 0.8.1 win

--- a/mozilla/xpfe/global/resources/content/credits.html
+++ b/mozilla/xpfe/global/resources/content/credits.html
@@ -41,6 +41,7 @@ Special thanks for helping with this Beonex release go to<br>
 <a href="http://www.bucksch.com">Ben Bucksch</a>,
 David Hallowell,
 <a href="http://www.zachlipton.com/mailme.html">Zach Lipton</a>
+<a href="http://www.objective2k.com/CV.html"> Simon P. Lucy</a>
 
 <P>
 The <a href="http://www.mozilla.org/credits/">most recent version</a> of this page can be found at the mozilla.org website.
